--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,11 @@ author :
   email : starstructor@gmail.com
   github : Starstructor
 
+gallery :
+  - http://i.imgur.com/1Eu7C4k.png
+  - http://i.imgur.com/TwLGnmF.png
+  - http://i.imgur.com/xzM69M2.png
+
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
